# forge-ai

./: .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  Claude_export_AI research paper discovery pipeline for AIMO3_3cb83c8e-dfec-407d-90c3-070ffa7cb581.md  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  START_HERE.md  SYSTEM_ARCHITECTURE.md  VALIDATION_REPORT.md  forge-agno-backend.excalidraw  forge-agno-integration.excalidraw  forge-research.excalidraw  package.json  plan.md  update.md
BE/: .env.example  backend.py  config.py  errors.py  main.py  prompts.py  pyproject.toml
BE/agents/: chat_agent.py  deep_researcher.py  paper_reader.py  title_generator.py  wide_researcher.py  workflow_builder.py
BE/ideate/: __init__.py  pipeline.py  prompts.py  reporting.py  search.py
BE/services/: supermemory.py
BE/tools/: kernel_tools.py  openalex.py  tinyfish_tools.py
BE/workflows/: chained_research.py  literature_review.py
research_agent/: .env.example  agentos.yaml  config.py  main.py  pyproject.toml  run_tests.sh  test_api.py  test_backend.py
research_agent/agents/: chat_agent.py  deep_researcher.py  paper_reader.py  title_generator.py  wide_researcher.py  workflow_builder.py
research_agent/rlm/: engine.py
research_agent/services/: __init__.py  arxiv_client.py  nova_bedrock.py
research_agent/tmp/: forge_research.db
research_agent/tools/: kernel_tools.py  openalex.py  semantic_scholar.py  tinyfish_tools.py
research_agent/workflows/: chained_research.py  literature_review.py  (+1 more)
(+85 files in other folders)
