[project]
name = "forge-research-agent"
version = "0.1.0"
description = "Agno-powered research agent backend for Forge AI"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "arxiv>=2.4.1",
    "pypdf>=6.7.5",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
